--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  http: ^0.13.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
